--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, "Helvetica Neue",  Arial, sans-serif;
   margin: auto;
+  background: #d1d1df;
 }
 
 .bg-image {
